--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "^16.7.0-alpha.0",
     "react-dom": "^16.7.0-alpha.0",
     "react-hot-loader": "^4.3.12",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "react-transition-group": "^2.5.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.1.2",
